; ModuleID = '/home/carl/AnghaBench/libgit2/examples/extr_for-each-ref.c_lg2_for_each_ref.c'
source_filename = "/home/carl/AnghaBench/libgit2/examples/extr_for-each-ref.c_lg2_for_each_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [45 x i8] c"Sorry, no for-each-ref options supported yet\00", align 1
@show_ref = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [34 x i8] c"Could not iterate over references\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lg2_for_each_ref(i32* %0, i32 %1, i8** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8** %2, i8*** %6, align 8
  %7 = load i8**, i8*** %6, align 8
  %8 = call i32 @UNUSED(i8** %7)
  %9 = load i32, i32* %5, align 4
  %10 = icmp ne i32 %9, 1
  br i1 %10, label %11, label %13

11:                                               ; preds = %3
  %12 = call i32 @fatal(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0), i32* null)
  br label %13

13:                                               ; preds = %11, %3
  %14 = load i32*, i32** %4, align 8
  %15 = load i32, i32* @show_ref, align 4
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @git_reference_foreach(i32* %14, i32 %15, i32* %16)
  %18 = call i32 @check_lg2(i32 %17, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0), i32* null)
  ret i32 0
}

declare dso_local i32 @UNUSED(i8**) #1

declare dso_local i32 @fatal(i8*, i32*) #1

declare dso_local i32 @check_lg2(i32, i8*, i32*) #1

declare dso_local i32 @git_reference_foreach(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
